o Updated to maven-verifier:1.3-SNAPSHOT
git-svn-id: https://svn.apache.org/repos/asf/maven/core-integration-testing/trunk@823740 13f79535-47bb-0310-9956-ffa450edef68